feature: establish end-to-end connection between server and DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,18 @@
+# App metadata
 spring.application.name=kotlin-spring-boot
+
+# GraphQL
 spring.graphql.path=/graphql
 spring.graphql.graphiql.enabled=true
+
+# Postgres details
+spring.datasource.url=jdbc:postgresql://postgres:5432/books
+spring.datasource.username=admin
+spring.datasource.password=admin
+
+# create and drop table, good for testing, production set to none or comment it
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# app custom property, if true, insert data for testing
+app.db.init.enabled=true
